syntax = "proto3";

package kuma.observability.v1alpha1;

option go_package = "v1alpha1";

import "envoy/api/v2/discovery.proto";

import "google/api/annotations.proto";

import "validate/validate.proto";

// Monitoring Assignment Discovery Service (MADS).
//
// xDS API that is meant for consumption by monitoring systems, e.g. Prometheus.
service MonitoringAssignmentDiscoveryService {

  rpc DeltaMonitoringAssignments(stream envoy.api.v2.DeltaDiscoveryRequest)
      returns (stream envoy.api.v2.DeltaDiscoveryResponse) {}

  rpc StreamMonitoringAssignments(stream envoy.api.v2.DiscoveryRequest)
      returns (stream envoy.api.v2.DiscoveryResponse) {}

  rpc FetchMonitoringAssignments(envoy.api.v2.DiscoveryRequest)
      returns (envoy.api.v2.DiscoveryResponse) {
    option (google.api.http).post = "/v2/discovery:monitoring";
    option (google.api.http).body = "*";
  }
}

// MADS resource type.
//
// Describes a group of targets that need to be monitored.
message MonitoringAssignment {

  // MADS resource name.
  //
  // E.g., `/meshes/default/services/backend` or
  // `/meshes/default/dataplanes/backend-01`.
  string name = 1 [ (validate.rules).string = {min_bytes : 1} ];

  // Describes a single target that needs to be monitored.
  message Target {

    // Labels associated with that particular target.
    //
    // E.g.,
    // `[
    //    "__address__" :      "192.168.0.1:8080",
    //    "__metrics_path__" : "/metrics"]`,
    //    "instance" :         "backend-01",
    //  ]`.
    map<string, string> labels = 1;
  }

  // List of targets that need to be monitored.
  repeated Target targets = 2;

  // Labels associated with every target in that assignment.
  //
  // E.g., `["job" : "backend"]`.
  map<string, string> labels = 3;
}
